syntax = "proto3";

package promotion;
option go_package ="proto/promotion";

enum PromotionType {
  PERCENTAGE = 0;
  FIXED      = 1;
}

message PromotionCreate {
  string code                   = 1;
  string description            = 2;
  int64  value                  = 3;
  PromotionType type            = 4;
  int64 activeFrom              = 5;
  int64 activeTo                = 6;
  int64 dailyActiveFrom         = 7;
  int64 dailyActiveTo           = 8;
  int64 MaxDailyActiveTime      = 9;
  int64 perUserActiveTime       = 10;
  int64 perUserDailyActiveTime  = 11;
  bool active                   = 12;
  int64 maxActiveTime           = 13;
}

message CreatePromotionResponse {
  int64 code                   = 1;
  string message               = 2;
  PromotionCreate data               = 3;
}

message GetProductionByCodeRequest {
  string code = 1;
}

message GetPromotionByCodeResponse {
  int64 code                   = 1;
  string message               = 2;
  PromotionResponseData data               = 3;
}

message PromotionResponseData {
  string code                   = 1;
  string description            = 2;
  int64  value                  = 3;
  PromotionType type            = 4;
  int64 activeFrom              = 5;
  int64 activeTo                = 6;
  int64 dailyActiveFrom         = 7;
  int64 dailyActiveTo           = 8;
  int64 MaxDailyActiveTime      = 9;
  int64 perUserActiveTime       = 10;
  int64 perUserDailyActiveTime  = 11;
  bool active                   = 12;
  int64 maxActiveTime           = 13;
  int64 createdAt               = 14;
  int64 updatedAt               = 15;
}

service PromotionService {
  rpc CreatePromotion(PromotionCreate) returns (CreatePromotionResponse) {}
  rpc GetPromotionByCode(GetProductionByCodeRequest) returns (GetPromotionByCodeResponse) {}
}
