syntax = "proto3";

package promotion.rpc;

option go_package = "promotion-service/app/protogen/rpc";

import "app/protobuf/message/promotion.proto";

service PromotionService {
  rpc GetPromotionById(promotion.message.GetPromotionByIdRequest) returns (promotion.message.GetPromotionByIdResponse){};
  rpc CreatePromotion(promotion.message.CreatePromotionRequest) returns (promotion.message.CreatePromotionResponse){};
  rpc UpdatePromotion(promotion.message.UpdatePromotionRequest) returns (promotion.message.UpdatePromotionResponse){};
}